2004-05-04  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (TEX): don't use the value when it ends in
	"latex"; TEX is also used by mpost.  Report from
	Yvon.Henel@wanadoo.fr.

2004-04-29  Karl Berry  <karl@gnu.org>

	* doc.texinfo.txi (Invoking makeinfo): mention --plaintext.
	From Akim.

	* doc/texinfo.tex (\emptyusermacros): can use \asis.
	(\identity): remove.

2004-04-29  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\commondummiesnofonts, \indexnofonts):  In order
	  to correctly transform words like `Dvo\v{r}\'{a}k' to `Dvorak'
	  for index sorting, one has to define all accent control sequences
	  as @asis.  (Current code would produce `Dvor{a}k'.)

2004-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* makeinfo/makeinfo.c (remember_error): Try cm_bye not more than
	twice.  Fixes `Too many errors!  Gave up.' looping.

2004-04-26  Karl Berry  <karl@gnu.org>

	* lib/system.h (STRCASEEQ, STRNCASEEQ): new #defines for
		convenience.
	* makeinfo/cmds.c (cm_strong): actually change the output to avoid a
	spurious xref.  Suggestion from Jan Nieuwenhuizen
	<janneke@gnu.org>, 26 Apr 2004 00:04:04 +0200, emacs-devel.

	* automake 1.8.4.

2004-04-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\emptyusermacros, \identity): new macros.
	(\indexdummiesnofonts): call it.
	This is to semi-support macro calls in the arg to @deffn.
	Report from: Akim Demaille <akim@epita.fr>, 20 Apr 2004 17:48:28 +0200.

2004-04-21  Karl Berry  <karl@gnu.org>

	* configure.ac (gl_FUNC_MKSTEMP): rename from UTILS_FUNC_MKSTEMP,
	per new gnulib code.

2004-04-20  Karl Berry  <karl@gnu.org>

	* makeinfo/tests/copying: force POSIX language setting.

2004-04-19  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_code): use <samp> for commands other than
	@code, so we get typewriter output; and add `...'
	for @samp.
	Report from: John Blevin <blevin@lucent.com>, 
	16 Apr 2004 11:40:01 -0400.

	* makeinfo/html.c (html_output_head) [CSS_FONT_ROMAN,
	CSS_FONT_SMALL_CAPS]: prettify.
